--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,7 @@
 	    <module>invoice-service-client</module>
 	    <module>agreement-client</module>
         <module>audit-service-client</module>
+        <module>venta-notification-client</module>
     </modules>
 
 	<build>
