--- a/booking-service-client/pom.xml
+++ b/booking-service-client/pom.xml
@@ -27,6 +27,10 @@
             <version>${global.version}</version>
         </dependency>
     </dependencies>
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
 
     <parent>
         <groupId>com.stanzaliving.core</groupId>
