--- a/pojo/pom.xml
+++ b/pojo/pom.xml
@@ -24,6 +24,10 @@
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 	<dependency>
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
