--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,8 @@
         <module>vault-service-client</module>
         <module>venta-notification-client</module>
 		<module>grammage-client</module>
-	</modules>
+        <module>generic-task-service-client</module>
+    </modules>
 
 	<build>
 		<plugins>
