--- a/pojo/pom.xml
+++ b/pojo/pom.xml
@@ -22,6 +22,12 @@
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.sendgrid</groupId>
+            <artifactId>sendgrid-java</artifactId>
+            <version>4.3.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 	<parent>
 		<groupId>com.stanzaliving.core</groupId>
