--- a/stanza-parent/pom.xml
+++ b/stanza-parent/pom.xml
@@ -27,7 +27,7 @@
 
 		<servlet-api.version>4.0.1</servlet-api.version>
 
-		<jackson-databind.version>2.9.8</jackson-databind.version>
+		<jackson-databind.version>2.12.0</jackson-databind.version>
 		<jackson.mapper.asl.version>1.9.12</jackson.mapper.asl.version>
 
 		<!-- jsr250 Version -->
@@ -71,7 +71,7 @@
 		<quartz.version>2.2.3</quartz.version>
 
 		<!-- Hibernate Version -->
-		<hibernate.version>5.0.12.Final</hibernate.version>
+		<hibernate.version>5.5.0.Final</hibernate.version>
 		<hibernate-validator.version>6.0.10.Final</hibernate-validator.version>
 		<c3p0.version>0.9.5.4</c3p0.version>
 
@@ -126,11 +126,11 @@
 				<version>${commons.io.version}</version>
 			</dependency>
 
-			<dependency>
+			<!--<dependency>
 				<groupId>org.codehaus.jackson</groupId>
 				<artifactId>jackson-mapper-asl</artifactId>
 				<version>${jackson.mapper.asl.version}</version>
-			</dependency>
+			</dependency> -->
 
 			<!-- apache dependency -->
 			<dependency>
