--- a/utilservice/pom.xml
+++ b/utilservice/pom.xml
@@ -31,6 +31,12 @@
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
