--- a/base/pom.xml
+++ b/base/pom.xml
@@ -189,6 +189,12 @@
             <artifactId>spring-webmvc</artifactId>
         </dependency>
 
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-spatial</artifactId>
+			<version>7.4.0</version>
+		</dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -196,12 +202,11 @@
             <scope>compile</scope>
         </dependency>
 
-	<dependency>
-		<groupId>org.apache.lucene</groupId>
-		<artifactId>lucene-core</artifactId>
-		<version>8.6.2</version>
-		<scope>compile</scope>
-	</dependency>
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-spatial</artifactId>
+			<version>7.4.0</version>
+		</dependency>
 
 	</dependencies>
 
