--- a/base/pom.xml
+++ b/base/pom.xml
@@ -201,6 +201,12 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.apache.lucene</groupId>-->
+<!--			<artifactId>lucene-core</artifactId>-->
+<!--			<version>7.4.0</version>-->
+<!--			<scope>compile</scope>-->
+<!--		</dependency>-->
 
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
