--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
 		<module>pojo-food</module>
 		<module>document-client</module>
 		<module>generic-task-service-client</module>
+		<module>residence-client</module>
 	</modules>
 
 	<build>
