--- a/venta-aggregation-service-client/pom.xml
+++ b/venta-aggregation-service-client/pom.xml
@@ -6,6 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>venta-aggregation-service-client</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
 
