--- a/pom.xml
+++ b/pom.xml
@@ -104,7 +104,8 @@
         <module>vault-service-client</module>
         <module>venta-notification-client</module>
         <module>security-service</module>
-	</modules>
+        <module>mail-client</module>
+    </modules>
 
 	<build>
 		<plugins>
