--- a/stanza-parent/pom.xml
+++ b/stanza-parent/pom.xml
@@ -43,7 +43,7 @@
 		<commons.validator.version>1.6</commons.validator.version>
 		<commons.fileupload.version>1.4</commons.fileupload.version>
 		<commons-csv.version>1.7</commons-csv.version>
-
+		<commons-configuration.version>1.10</commons-configuration.version>
 		<!-- guava Version -->
 		<guava.version>20.0</guava.version>
 
@@ -107,6 +107,11 @@
 		<spring-boot-starter-log4j2.version>2.1.3.RELEASE</spring-boot-starter-log4j2.version>
 		
 		<opencsv.reader.version>4.1</opencsv.reader.version>
+
+		<!-- aspectJ Version -->
+		<aspectjrt.version>1.9.7</aspectjrt.version>
+		<!-- reflections Version -->
+		<reflections.version>0.10</reflections.version>
 		
 	</properties>
 
